fix: adjusting questionary button alignment

--- a/app/packs/stylesheets/custom/questionary.scss
+++ b/app/packs/stylesheets/custom/questionary.scss
@@ -21,6 +21,28 @@
 
   & > div {
     border-bottom: 1px solid #e0e0e0;
-    min-height: 300px;
+    min-height: 150px;
   }
+}
+
+.question-conainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 1rem;
+
+}
+
+.submit-container {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 1rem;
+  width: 100%;
+}
+
+.submit-content {
+  display: flex;
+  flex-direction: column;
+  margin-top: 1rem;
+  align-items: flex-end;
 }
